tests/compile/userdata_const_getter.stderr
error: const items do not support `getter` or `setter`
 --> tests/compile/userdata_const_getter.rs:6:5
  |
6 |     #[lua(getter)]
  |     ^^^^^^^^^^^^^^
